--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,8 @@
     <div id="leaderboard"></div>
 
     <script>
-        // Replace the socket initialization with:
+        const isLocal = window.location.hostname === '127.0.0.1' || window.location.hostname === 'localhost';
+        const serverUrl = isLocal ? 'http://localhost:5000' : 'https://flashcards-reviewer.onrender.com';
         const socket = io(window.location.origin, {
             reconnection: true,
             reconnectionDelay: 1000,
@@ -113,6 +114,10 @@
         });
         let currentUsername = null;
         let activeQuestionId = null;
+        function formatDate(timestamp) {
+            const date = new Date(timestamp * 1000);
+            return date.toLocaleString();
+          }
 
         function registerUser() {
             const username = document.getElementById('username').value.trim();
@@ -148,7 +153,8 @@
             div.id = `q-${question.id}`;
             div.innerHTML = `
                 <div class="question-number">
-                    Flashcard #${question.number} (${isCurrent ? 'Current' : 'Past'})
+                Flashcard #${question.number} - ${formatDate(question.id.split('_')[1])}
+                ${isCurrent ? '(Live Now!)' : ''}
                 </div>
                 <h2>${question.question}</h2>
                 ${question.image ? `<img src="${question.image}">` : ''}
