--- a/public/index.html
+++ b/public/index.html
@@ -96,28 +96,9 @@
     <div id="leaderboard"></div>
 
     <script>
-        const isLocal = window.location.hostname === '127.0.0.1' || window.location.hostname === 'localhost';
-        const serverUrl = isLocal ? 'http://localhost:5000' : 'https://flashcards-reviewer.onrender.com';
-        const socket = io(window.location.origin, {
-            reconnection: true,
-            reconnectionDelay: 1000,
-            reconnectionAttempts: Infinity
-        });
-        
-        // Add this to handle initial load
-        window.addEventListener('load', () => {
-            updateLeaderboard();
-            fetchQuestions();
-            
-            // Check if we're connected to the right server
-            console.log('Connected to:', window.location.origin);
-        });
+        const socket = io(window.location.origin);
         let currentUsername = null;
         let activeQuestionId = null;
-        function formatDate(timestamp) {
-            const date = new Date(timestamp * 1000);
-            return date.toLocaleString();
-          }
 
         function registerUser() {
             const username = document.getElementById('username').value.trim();
@@ -130,20 +111,17 @@
             }
         }
 
-        // Modify fetchQuestions to handle errors
         async function fetchQuestions() {
             try {
-            const response = await fetch('/questions');
-            if (!response.ok) throw new Error('Network error');
-            const questions = await response.json();
-            questions.forEach(q => {
-                if (!document.getElementById(`q-${q.id}`)) {
-                addQuestionToHistory(q);
-                }
-            });
+                const response = await fetch('/questions');
+                const questions = await response.json();
+                questions.forEach(q => {
+                    if (!q.active) {
+                        addQuestionToHistory(q);
+                    }
+                });
             } catch (error) {
-            console.error('Error loading questions:', error);
-            setTimeout(fetchQuestions, 5000); // Retry after 5 seconds
+                console.error('Error loading questions:', error);
             }
         }
 
@@ -153,8 +131,7 @@
             div.id = `q-${question.id}`;
             div.innerHTML = `
                 <div class="question-number">
-                Flashcard #${question.number} - ${formatDate(question.id.split('_')[1])}
-                ${isCurrent ? '(Live Now!)' : ''}
+                    Flashcard #${question.number} (${isCurrent ? 'Current' : 'Past'})
                 </div>
                 <h2>${question.question}</h2>
                 ${question.image ? `<img src="${question.image}">` : ''}
@@ -212,11 +189,7 @@
                 input.disabled = true;
             }
         }
-        socket.on('content_refresh', () => {
-            console.log('Refreshing content from GitHub...');
-            fetchQuestions();
-            updateLeaderboard();
-          });
+
         socket.on('new_question', (data) => {
             activeQuestionId = data.id;
             const questionBox = document.getElementById('question-box');
