--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
     <div id="leaderboard"></div>
 
     <script>
-        const socket = io(window.location.origin);
+        const socket = io('https://flashcards-reviewer.onrender.com/');
         let currentUsername = null;
         let activeQuestionId = null;
 
